# LoomMind

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
data/: langgraph.md
memory/: MEMORY.md  planning_long_term.md
scripts/: export_langgraph_mermaid.py  export_log_txt.py  log_export.py
src/: feishu_app.py  graph_agent.py  main.py  openrouter.py  trust.py
src/api/: __init__.py  api.py  openrouter.py
src/cli/: __init__.py  app.py  response_check.py  stdio_confirm.py  stdio_protocol.py  stdio_trust.py
src/context/: __init__.py  compass.py  content_export.py  content_manager.py  local_session.py  response_check.py  token_budget.py
src/lark/: app.py
src/memory/: __init__.py  injection.py  store.py
src/parser/: parser.py
src/planning/: __init__.py  loop.py  memory.py
src/skills/: __init__.py  business_funcs.py  loader.py  skills_config.json
src/tools/: __init__.py  loader.py  server.py
src/tools/list/: files.py  run_bash.py
template/: MEMORY.md.tmpl  memory_summary.md.tmpl  planning_long_term.md.tmpl
tools/scripts/: run_bash.py
tui/: Cargo.toml
tui/src/: main.rs  util.rs
tui/src/child/: mod.rs
tui/src/session/: events.rs  input.rs  mod.rs  run.rs  state.rs
tui/src/term/: mod.rs
tui/src/theme/: constants.rs  mod.rs  palette.rs
tui/src/view/: header.rs  history.rs  mod.rs  popup.rs  render.rs
