[package]
name = "loommind-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = { version = "0.28", features = ["bracketed-paste", "event-stream"] }
# Inline `insert_before` 需 `scrolling-regions`，否则逐格绘制会把 CJK 宽字符尾格打成可见空格。
ratatui = { version = "0.29", features = ["scrolling-regions"] }
serde_json = "1"
unicode-width = "0.2"
